feat: 개봉일 재개봉 정보 표시
